--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -20,6 +20,7 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 
 article, aside, details, figcaption, figure, 
@@ -29,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     line-height: 1;
+    background-color: black;
 }
 
 ol, ul {
